<!--
  ~ Copyright 2017 Yongshun Ye
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">青春川大</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="homepage">主页</string>
    <string name="news">团情快讯</string>
    <string name="notices">公告</string>
    <string name="activities">活动预告</string>
    <string name="youth">院系风采</string>
    <string name="settings">设置</string>
    <string name="about">关于此应用程序</string>
    <string name="internet_connection_failed">网络连接失败，请检查你的网络连接并重试</string>
    <string name="no_app_found_to_open_webpage">未找到可查看网页的应用程序</string>
    <string name="view_detail">查看详细内容</string>
    <string name="load_more">加载更多</string>
    <string name="no_more_results">无更多结果</string>
    <string name="refresh">刷新</string>
    <string name="project_name">SCUYouth</string>
    <string name="developer">开发者</string>
    <string name="developer_info">四川大学数学学院 叶永舜</string>
    <string name="version">版本</string>
    <string name="copyright">版权</string>
    <string name="third_party_copyright_info">青春川大、青春川大logo、青春川大网站信息及其他青春川大相关信息版权均归青春川大、四川大学团委、共青团四川大学委员会、四川大学青年传媒（校团委宣传部）网络部所有。</string>
    <string name="github_info">本项目是开源软件，你可以在GitHub获取其源代码：\nhttps://github.com/ShreckYe/SCUYouth</string>
    <string name="open_source_licenses">开源许可证</string>
</resources>
